--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "firebase": "^7.15.1",
+    "node-sass": "^4.14.1",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2",
+    "slug": "^3.3.0",
     "vue": "^2.6.11",
     "vue-gapi": "^0.3.1",
     "vue-material": "^1.0.0-beta-14",
